# factorial_crate

./: README.md
fact/: Cargo.toml
fact/src/: lib.rs
